[package]
name = "rust-lib-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonsai-bt-tester = { path = "bonsai-bt-tester", version = "0.1.0" }
shipyard-tester = { path = "shipyard-tester", version = "0.1.0" }
fasteval-tester = { path = "fasteval-tester", version = "0.1.0" }